--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-useragent": "^1.0.15",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
