--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
-    "ejs": "^3.1.5",
+    "ejs": "^3.1.6",
     "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
     "express-useragent": "^1.0.15",
-    "express-validator": "^6.6.1",
+    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.27.0",
-    "mysql2": "^2.1.0",
-    "nodemon": "^2.0.4",
+    "moment": "^2.29.1",
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^4.0.0"
   }
 }
